force-app/main/default/objects/Compliance_Remediation__mdt/Compliance_Remediation__mdt.object-meta.xml
<CustomObject>
    <label>Compliance Remediation</label>
    <pluralLabel>Compliance Remediations</pluralLabel>
    <description>Remediation action definitions for compliance rule failures</description>
</CustomObject>