force-app/main/default/objects/Compliance_Remediation__mdt/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Type of remediation action</description>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>NOTIFY</fullName><default>true</default><label>Notify</label></value>
            <value><fullName>CREATE_CASE</fullName><default>false</default><label>Create Case</label></value>
            <value><fullName>AUTO_FIX</fullName><default>false</default><label>Auto Fix</label></value>
            <value><fullName>METADATA_DEPLOY</fullName><default>false</default><label>Metadata Deploy</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>