force-app/main/default/objects/Compliance_Remediation__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Remediation priority (1=Critical, 2=High, 3=Medium, 4=Low)</description>
    <label>Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>