force-app/main/default/objects/Compliance_Remediation__mdt/fields/Remediation_Payload__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Payload__c</fullName>
    <description>JSON payload for auto-remediation execution</description>
    <label>Remediation Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>